<resources>
    <string name="app_name">ناردون</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="this_is_tab_1">This is tab 1</string>
    <string name="this_is_tab_2">This is tab 2</string>
    <string name="this_is_tab_3">This is tab 3</string>

    <string name="daemi">همراه اول دائمی (نور آباد ممسنی)</string>
    <string name="etebari">همراه اول اعتباری (نور آباد ممسنی)</string>
    <string name="irancell">ایرانسل (نور آباد ممسنی)</string>
    <string name="numberOfSMS">تعداد پیامک های انتخابی شما: </string>
    <string name="numberOfHorof">تعداد کارکتر:فارسی 70 (کارکتر یک پیامک) </string>
    <string name="filterMatn">به دلیل فیلتر برخی از کلمات مانند قرعه کشی، جایزه، برنده و غیره از به کار بردن این کلمات در متن پیامک خودداری نمایید
برای اطمینان قبل از ارسال یک پیامک تست به شماره خود ارسال کنید در صورت ارسال موفق میتوانید به صورت انبوه ارسال
کنید. </string>
    <string name="txtlogin">لطفا برای استفاده از امکانات ناردون شماره تلفن همراه خود را وارد کنید. کد فعال سازی از طریق پیام کوتاه برای شما ارسال خواهد شد.</string>
    <string name="txtvalidation">لطفا کد فعال سازی که از طریق پیامک برایتان ارسال میشود را وارد کنید:</string>

    <string name="entezarpardakht">آگهی شما با موفقیت ثبت شد و در انتظار پرداخت می باشد. پس از پرداخت وجه آگهی شما مورد بررسی ناظر قرار میگیرد و منتشر خواهد شد.</string>
    <string name="entezar">آگهی شما با موفقیت ثبت شد و پس از بررسی ناظر منتشر خواهد شد.</string>
    <string name="montasher">آگهی شما منتشر شده است ، در صورت ویرایش ، آگهی شما مجددا بررسی شده و انتشار میابد.</string>
    <string name="rad">متاسفانه آگهی شما تایید نشد.</string>
    <string name="callplease">لطفا قبل از ثبت سفارش با آگهی دهنده تماس گرفته و هماهنگی لازم را بعمل آورید.</string>
    <string name="tedadMojaz">امکان ارسال وجود ندارد . تعداد پیامک های شما بیشتر از اعتبارتان می باشد.</string>
    <string name="failSend">پیامک ارسال نشد . لطفا لحظاتی بعد مجددا اممتحان کنید.</string>
    <string name="yourOrder">سفارش شما با موفقیت ثبت شد</string>
    <string name="screenshot">برای تایید سفارش با شما تماس گرفته خواهد شد.</string>
    <string name="niniText">انتخاب برنده نی نی عکس در پایان هر ماه ساعت 10 شب انجام میشود.</string>
    <string name="smsAnboh">در صورتی که میخواهید ارسال پیامک انبوه توسط همکاران ما انجام شود با شماره 09175006484 تماس بگیرید.</string>
    <string name="niniExpire">لطفا توجه داشته باشید نی نی عکس ها در پایان هر ماه پس از انتخاب عکس برتر منقضی خواهند شد و نمایش داده نمیشوند.</string>
    <string name="aboutus">
        ناردون یک برند قانونی و ثبت شده میباشد که با هدف خرید و فروش انلاین و بی واسطه ما بین خریدار و فروشنده طراحی شده است. \n
        در بخش اگهی های ناردون تمامی لوازم نو و دست دوم مورد نیاز خود را میتوانید جستجو کنید\n\n
        <b>پیامک انبوه:\n</b>

\nپیامک های تبلیغاتی، اطلاع رسانی و غیره را در این بخش میتوانید انجام دهید

        پیامک شما به صورت انبوه در شهرستان نوراباد ممسنی ارسال خواهد شد و گزارش ارسال تقدیم میگردد\n\n

                <b>سفارش آنلاین غذا:\n\n</b>


امکان سفارش انلاین غذا در این بخش برای شما فراهم میباشد،
غذای خود را سفارش داده و درب منزل تحویل بگیرید\n\n

                <b>نی نی عکس:\n</b>


\n\nخانواده های عزیز میتوانند عکس کودک دلبند خود را با کاربران به اشتراک بگذارند
\nمدیریت ناردون پایان هر ماه به عکس برتر هدیه ای به رسم یادبود اهدا خواهد کرد.\n همچنین به سه نفر از کاربران که در رای گیری شرکت کرده اند به قید قرعه جوایزی تقدیم میشود


\nاستفاده از امکانات ناردون به منزله قبول توافقنامه و قوانین ان میباشد
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="rules">
        <b>شرایط ثبت آگهی:\n</b>
آگهی‌دهندگان با ثبت آگهی خود در ناردون تأیید می‌کنند که آگهی ایشان شامل مواردی که در ادامه آورده می‌شوند نخواهد بود و همچنین دارای سن بالای ۱۸ سال هستند. در نظر داشته باشید، به منظور تسهیل و تسریع فرآیند تأیید و انتشار آگهی‌ها، ناردون ممکن است در مواردی بر اساس قوانین، متن یا عنوان آگهی شما را به طور جزئی تغییر دهد.
\n
مغایرت با قوانین جاری جمهوری اسلامی ایران و عرف جامعه،ناقض حریم شخصی افراد،آگهی‌های فروشی بدون تصویر در بخش‌های «مربوط به خانه» و «شخصی»،استفاده از عبارت‌ها یا کلماتی مانند: خریدار، فروش، ویژه، رند، مفت، ارزان، نو، زیر قیمت، استثنائی، گوشی، حراج و موارد مشابه،درج قیمت در عنوان آگهی،هر گونه توهین به ادیان رسمی کشور، آداب، رسوم، قومیت‌ها، لهجه‌ها و گویش‌های مختلف،استفاده ابزاری از تصاویر اشخاص در آگهی، درج بی‌مورد عکس صورت اشخاص یا استفاده از عکس کودکان برای معرفی کالا و خدماتی که مخاطب آن کودکان نیستند،استفاده از حروف و زبان انگلیسی برای آگهی‌های فارسی،هر نوع آگهی و خبرپراکنی سیاسی، اجتماعی یا مذهبی که جنبه تجاری نداشته باشد،برنامه‌ها و روش‌های عبور از فیلترینگ، VPN و خدمات یا کالاهای مربوط به نصب آنتن، راه اندازی ماهواره یا اینترنت ماهواره‌ای،ابزار یا آموزش‌های نفوذ، خرابکاری، شکستن قفل، هک و کرک،فروش برنامه‌های نرم‌افزاری یا کتاب‌های فاقد مجوز قانونی برای انتشار و سایر موارد ناقض «قانون حمایت حقوق مؤلفان و مصنفان و هنرمندان»،هر گونه اجاره و فروش فیلم یا موسیقی،شبکه‌های هرمی و فعالیت‌های غیرقانونی و غیرمجاز اقتصادی مشابه،هر نوع مسابقه، قرعه‌کشی و بخت‌آزمایی (با جایزه یا بدون جایزه)،آگهی انجام پروژه‌های دانشجویی و دانش آموزی،هر گونه کالایی که موجب رواج خشونت و آسیب رساندن به دیگران می‌شود، مانند: سلاح‌های گرم و سرد، مواد محترقه و امثال آن،کالا و خدمات مرتبط با مواد مخدر، سیگار یا ترک اعتیاد،فروش دستگاه فلزیاب، گنج‌یاب، حفاری غیرمجاز یا لوازم و تجهیزات مرتبط با آن،خدمات مرتبط با همسریابی، دوست‌یابی، مشاوره خانوادگی،آگهی‌هایِ محرمیت، صیغه و ازدواج،خدمات، دفاتر و شرکت‌های مرتبط با لیزینگ به جز نمایندگی‌های مجاز با ارائه مجوز،فروش فاکتور و پیش فاکتور برای اخذ وام، حذف سهم بیمه کارفرما و مشابه آن،هرگونه خدمات مرتبط با گرین‌کارت یا اقامت کشورها و مسافرت و اخذ ویزا به کشورهایی که منع قانونی برای ورود به آن‌ها وجود دارد،خرید و فروش فیش حج عمره و تمتع،خرید و فروش اعضای بدن، مانند:‌ «کلیه»،درخواست کمک‌های نقدی یا پیش‌پرداخت برای معامله‌های از راه دور،درج شماره حساب در متن آگهی،خدمات و کالاهایی که شائبه کلاهبرداری در آن مشاهده شود،معرفی سایت‌، کالا یا خدماتی که به هر شکلی قصد رقابت با ناردون را دارند،خرید و فروش حیوانات، پرندگان و خزندگان وحشی و گوشت‌خوار،خرید و فروش مواد غذایی، تقویتی و مکمل‌های ورزشی،نصب برنامه‌های جانبی موبایل و ویندوز،پنل پیامک انبوه،درج آگهی‌های دوره‌های آموزشی بدون قراردادن اطلاعاتی در مورد مدرس،درج آگهی‌ خودروهای غیر قابل خرید و فروش در ایران، درج مکرر آگهی‌‌های یکسان حتی با عناوین متفاوت در یک روز،ارسال مجدد یک آگهی‌‌ که از زمان حذف آن توسط کاربر، بیش از ۲۴ ساعت سپری نشده باشد،قرار ملاقات غیرتجاری به صورت آنلاین،وجود جملات نادرست از نظر املائی یا نگارشی وآگهی‌های فروش سیم کارت که شمارهٔ آن در عنوانِ آگهی درج نشده باشد.
\n
هرگونه سوءاستفاده از شماره تلفن همراه یا نشانی پست الکترونیکی دیگران پیگرد قانونی دارد و آگهی دهنده مسئول آن تلقی شده و ناردون در این مورد هیچ گونه مسئولیتی ندارد.
\n
<b>شرایط مشاهده و استفاده از آگهی‌ها:\n</b>

هرگونه استفاده از ناردون به معنی پذیرفتن شرایط مندرج در این سایت است. ناردون هیچ توافقی با کاربران خارج از این شرایط ندارد. شرایط زیر مربوط به کسانی است که به هر شکلی از آگهی‌های منتشر شده‌ٔ ناردون استفاده می‌کنند.
\n
تلاش ناردون، نشر آگهی‌ها با اطلاعات صحیح و درست است اما نمی‌تواند صحت آگهی‌ها را تضمین نماید و هیچ‌گونه تعهد یا مسئولیتی در قبال آگهی‌ها برعهده نمی‌گیرد.مسئولیت استفاده از آگهی‌های این سایت بر عهدهٔ شماست و ناردون هیچ تعهدى در قبال خسارات مستقیم، اتفاقى، تبعى، غیرمستقیم و کیفرى، ناشى از دسترسى و استفادهٔ شما از این سایت ندارد.ناردون هیچ قرارداد، تعهدنامه یا سندی را با آگهی‌دهندگان حقیقی یا حقوقی منعقد نمی‌کند. کاربرانِ ناردون در هر لحظه قادر به ویرایش آگهی خود هستند، بنابراین ناردون، هیچ‌گونه مسئولیتی را در قبال هر نوع آگهی درج شده در سایت نمی‌پذیرد و صرفاً مطالب درج شده توسط کاربران را نمایش می‌دهد.مسئولیت استفاده از هرگونه متن، پیام، توضیح، اطلاعات، عکس، مشخصات تماس و موارد مشابه که به ناردون ارسال می‌شود یا در آن قرار می‌گیرد، شامل بازتولید، افشاء، مخابره، نشر و
پخش آن بر عهدهٔ فرستنده اطلاعات است.
\n
ناردون مختار است هر گونه پیام، آگهی یا عکسی که به این سایت ارسال می‌کنید یا هر حساب کاربری و اطلاعات دیگری که مربوط به شما یا ایجاد شده توسط شما باشد را هر زمانی و به هر شکلی که ضروری بداند حذف نماید.مسئولیت هر لینک، مطلب و ادعایی مربوط به ناردون که به واسطه‌ٔ اشخاص حقیقی و حقوقی دیگر در سایت، بلاگ یا شبکه‌های اجتماعی و باقی رسانه‌ها منتشر می‌شود، با خود این افراد است و ناردون مسئولیتی در قبال آنها ندارد.آگهی‌های ناردون با هزینه‌ٔ گردانندگان سایت جمع‌آوری، نظارت، مرتب‌سازی و توزیع شده است و حق حذف آگهی‌ها در هر زمان به ارسال‌کننده آگهی داده شده است. استفاده کننده از ناردون حق کپی‌برداری از اطلاعات آگهی‌دهنده، نوشتار و تصاویر آگهی‌های ارسال شده به ناردون را چه به شکل دستی و یا خودکار نخواهد داشت و انجام این موارد پیگرد قانونی دارد. قوانین جمهوری اسلامی ایران بر تعبیر، تفسیر، اجرا و تأثیر این توافق‌نامه حاکم خواهند بود.

<b>شرایط استفاده از امکانات ارتباطی:\n</b>
ناردون برخی امکانات ارتباطی از قبیل چت را با هدف تسهیل ارتباطات، کاهش مزاحمت‌ها و افزایش معاملات ارائه می‌کند. صحبت‌های کاربران صرفاً باید مربوط به آگهی خاص و در خصوص ارائه و یا دریافت کالا و خدمات مورد اشاره باشد و استفاده از آن بابت مقاصد دیگر از جمله ارتباطات خصوصی مجاز نیست. ناردون برای ایجاد محیطی ایمن برای معاملات، ضمن ذخیره‌سازی اطلاعات ارتباطی و تحلیل خودکار آنها، بر اساس یافته‌های هوش مصنوعی، پیشنهادات و خدماتی را بر روی ابزارهای ارتباطی خود ارائه می‌کند. لذا لازم به یادآوری است که بر خلاف محیط‌های ارتباطی دیگر که مشمول استانداردهای حریم شخصی است، ارتباطات روی ناردون صرفاً باید مربوط به معاملات باشد و ناردون برای ایجاد محیطی ایمن و جلوگیری از سوءاستفاده و مزاحمت، بر روی این ابزارها ممکن است در صورت لزوم، نظارت ماشینی یا انسانی صورت دهد.
\n

<b>امن خرید کنید:\n</b>
از کسانی خرید کنید که امکان ملاقات حضوری با آنها پیش از انجام معامله وجود داشته باشد.
\n
هرگز پیش از دریافت کالا هزینه‌ای پرداخت نکنید.اگر فروشنده اطلاعات شخصی یا اطلاعات حساب بانکی خود را ارائه کرد،‌ دلیل کافی برای اعتماد شما به ایشان نیست؛ ممکن است اطلاعات شخص دیگری مورد سوء‌استفاده قرار گرفته باشد.در صورت امکان، پس از خرید کالا رسید کتبی معتبر از فروشنده دریافت کنید.
\n


</string>
    <integer-array name="img_id_arr"></integer-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details">Details</string>

    <string name="typeofnews">بخش دخترانه و سلامت صرفا جهت مطالب سرگرم کننده و اموزشی میباشد
بخش اجتماعی مختص روابط عمومی اداره‌های شهرستان میباشد و تنها مسئولین محترم روابط عمومی مجاز به درج خبر در این بخش هستند
</string>
</resources>
