<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#fff"
        android:orientation="vertical"
        android:weightSum="10">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:shadowColor="#180117"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:text="شهر در دستان شما"
                        android:textColor="#730099"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="در این بخش شما قادر خواهید بود کالا و خدمات خود را با ارسال پیامک انبوه به شهرستان نورآباد معرفی کنید، همچنین پیامک اطلاع رسانی تشییع و ترحیم و غیره را 24 ساعت شبانه روز و 7روز هفته به آسانی انجام دهید."
                        android:textColor="#333300"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2.15"
                        android:gravity="center"
                        android:text="با انتخاب یک یا چند گزینه از موارد زیر میتوانید پیامک خود را به گروه مورد نظر در شهرستان نور آباد ارسال کنید"
                        android:textColor="#003399"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:weightSum="7">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="right"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/etebari"
                                android:textColor="@android:color/black" />

                            <CheckBox
                                android:id="@+id/chk_etebari"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:orientation="horizontal"
                            android:padding="2dp">

                            <TextView
                                android:id="@+id/txt_etebari"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textColor="#6f6fff"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:visibility="gone" />

                            <EditText
                                android:id="@+id/edt_etebari"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/edt_frame"
                                android:ems="10"
                                android:gravity="center"
                                android:hint="تعداد پیامک"
                                android:inputType="number"
                                android:padding="5dp"
                                android:visibility="gone" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="right"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/daemi"
                                android:textColor="@android:color/black" />

                            <CheckBox
                                android:id="@+id/chk_daemi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:orientation="horizontal"
                            android:padding="2dp">

                            <TextView
                                android:id="@+id/txt_daemi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textColor="#6f6fff"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:visibility="gone" />

                            <EditText
                                android:id="@+id/edt_daemi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/edt_frame"
                                android:ems="10"
                                android:gravity="center"
                                android:hint="تعداد پیامک"
                                android:inputType="number"
                                android:padding="5dp"
                                android:visibility="gone" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="right"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/irancell"
                                android:textColor="@android:color/black" />

                            <CheckBox
                                android:id="@+id/chk_irancell"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:orientation="horizontal"
                            android:padding="2dp">

                            <TextView
                                android:id="@+id/txt_irancell"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textColor="#6f6fff"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:visibility="gone" />

                            <EditText
                                android:id="@+id/edt_irancell"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/edt_frame"
                                android:ems="10"
                                android:gravity="center"
                                android:hint="تعداد پیامک"
                                android:inputType="number"
                                android:padding="5dp"
                                android:visibility="gone" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/smsAnboh"
                            android:textColor="@android:color/holo_green_dark"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/filterMatn"
                            android:textColor="#333300"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="متن پیامک:"
                            android:textColor="#003399"
                            android:textSize="17sp" />

                        <EditText
                            android:id="@+id/edt_matn"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@drawable/edt_frame"
                            android:ems="10" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/numberOfHorof"
                            android:textColor="#000"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_character"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="right"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_price"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:ems="10" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="مبلغ قابل پرداخت : "
                            android:textColor="#004d00"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom"
                            android:orientation="vertical"
                            android:padding="12dp">

                            <TextView
                                android:id="@+id/txt_warning"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="متاسفانه در حال حاضر امکان خرید این تعداد پیامک وجود ندارد."
                                android:textColor="@android:color/holo_red_dark"
                                android:visibility="invisible" />

                            <Button
                                android:id="@+id/btn_pay"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/gray"
                                android:text="پرداخت"
                                android:textColor="#fff"
                                android:textSize="16sp"
                                android:visibility="visible"
                                android:layout_above="@id/txt_warning"
                                />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>